# Webguin

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: main.yml
code/: CMakeLists.txt
code/include/mainframe/webguin/: client.h  controller.h  data.h  jsonserver.h  method.h  request.h  response.h  server.h
code/include/mainframe/webguin/enum/: httpcode.h  methodtype.h  paramtype.h  pathparttype.h
code/include/mainframe/webguin/http/: cookie.h  header.h  methodtype.h
code/include/mainframe/webguin/model/: compareresult.h  param.h  paraminfo.h  pathpart.h  timings.h
code/include/mainframe/webguin/model/http/: cookie.h  header.h
code/include/mainframe/webguin/request/: base.h  json.h
code/include/mainframe/webguin/response/: base.h  json.h
code/src/: client.cpp  controller.cpp  method.cpp  server.cpp
code/src/http/: cookie.cpp  header.cpp
code/src/model/: compareresult.cpp  param.cpp  pathpart.cpp
code/src/model/http/: cookie.cpp  header.cpp
code/src/request/: base.cpp
code/src/response/: base.cpp
code/tests/: CMakeLists.txt
code/tests/helloworld/: CMakeLists.txt
code/tests/helloworld/src/: main.cpp
examples/: CMakeLists.txt
examples/advanced/: CMakeLists.txt  README.md
examples/advanced/src/: main.cpp
examples/params/: CMakeLists.txt  README.md
examples/params/src/: main.cpp
examples/simple/: CMakeLists.txt  README.md
examples/simple/src/: main.cpp
